# DualIanna

./: CMakeLists.txt  README.md  running.md
compact/: Resolution.C  SCEPCALsteering.py  SCEPCALsteering_edm.py  convert_to_simple_tree.py  digi_dualcrys.py  digi_process.py  digi_test.py  hists_junk.root  lala.root  massjobs.py  massjobs.sh  massjobs_s2.py  process_digis.py  vis.mac
include/: SCEGeant4Output2ROOT.h
src/: CVGeant4Output2EDM4hep.cpp  DualCrysCalorimeterDump.cpp  DualCrysCalorimeterSDAction.cpp  SCEGeant4Output2ROOT.cpp
